# RegulaAE

./: .gitignore  README.md  environment.yml  pyproject.toml
document/: definition_of_done.md
document/requirment/: user_story_01.md  user_story_02.md  user_story_03.md  user_story_04.md  user_story_05.md  user_story_06.md  user_story_07.md  user_story_08.md
document/uml/diagram/: architectural_model.puml  class_model.puml  interaction_model.puml  package_model.puml
document/uml/model/: adapter_app.puml  adapter_flask_audit_log_controller.puml  adapter_flask_auth_controller.puml  adapter_flask_user_access_controller.puml  adapter_google_oauth_client.puml  adapter_sql_alchemy_audit_log_reader.puml  adapter_sql_alchemy_audit_log_writer.puml  adapter_sql_alchemy_user_repository.puml  bootstrap_app_config.puml  bootstrap_config_loader.puml  bootstrap_wiring.puml  dto_audit_log_entry_view.puml  dto_authenticate_user_by_token_request.puml  dto_authenticate_user_by_token_response.puml  dto_search_audit_log_request.puml  dto_search_audit_log_response.puml  dto_update_user_role_request.puml  dto_update_user_role_response.puml  entity_audit_log_entry.puml  entity_user.puml  enum_access_level.puml  enum_action_outcome.puml  enum_identity_provider.puml  enum_permission.puml  enum_resource_type.puml  enum_user_role.puml  enum_user_status.puml  model_audit_log_entry.puml  model_user.puml  port_audit_log_reader.puml  port_audit_log_writer.puml  port_authenticate_user_by_token.puml  port_external_identity_provider_client.puml  port_search_audit_log.puml  port_update_user_role.puml  (+10 more)
